bk_ida/gccida/c1/apply_result_size
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1431:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v1; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1432:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1433:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1434:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1435:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1438:6: error: use of undeclared identifier 'apply_result_size_size'; did you mean 'apply_result_size'?
if ( apply_result_size_size < 0 ) 
     ^~~~~~~~~~~~~~~~~~~~~~
     apply_result_size
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1428:6: note: 'apply_result_size' declared here
int  apply_result_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1440:1: error: use of undeclared identifier 'apply_result_size_size'
apply_result_size_size = 0; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1498:6: error: use of undeclared identifier 'apply_result_size_size'; did you mean 'apply_result_size'?
if ( apply_result_size_size % v6 ) 
     ^~~~~~~~~~~~~~~~~~~~~~
     apply_result_size
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1428:6: note: 'apply_result_size' declared here
int  apply_result_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1498:29: error: invalid operands to binary expression ('int (void)' and 'int')
if ( apply_result_size_size % v6 ) 
     ~~~~~~~~~~~~~~~~~~~~~~ ^ ~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1499:1: error: use of undeclared identifier 'apply_result_size_size'
apply_result_size_size = v6 + apply_result_size_size - 1 - ( v6 + apply_result_size_size - 1) % v6; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1499:31: error: use of undeclared identifier 'apply_result_size_size'; did you mean 'apply_result_size'?
apply_result_size_size = v6 + apply_result_size_size - 1 - ( v6 + apply_result_size_size - 1) % v6; 
                              ^~~~~~~~~~~~~~~~~~~~~~
                              apply_result_size
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1428:6: note: 'apply_result_size' declared here
int  apply_result_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1499:67: error: use of undeclared identifier 'apply_result_size_size'; did you mean 'apply_result_size'?
apply_result_size_size = v6 + apply_result_size_size - 1 - ( v6 + apply_result_size_size - 1) % v6; 
                                                                  ^~~~~~~~~~~~~~~~~~~~~~
                                                                  apply_result_size
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1428:6: note: 'apply_result_size' declared here
int  apply_result_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1499:95: error: invalid operands to binary expression ('int (*)(void)' and 'int')
apply_result_size_size = v6 + apply_result_size_size - 1 - ( v6 + apply_result_size_size - 1) % v6; 
                                                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1500:1: error: use of undeclared identifier 'apply_result_size_size'; did you mean 'apply_result_size'?
apply_result_size_size += mode_size[v1]; 
^~~~~~~~~~~~~~~~~~~~~~
apply_result_size
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1428:6: note: 'apply_result_size' declared here
int  apply_result_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1500:24: error: invalid operands to binary expression ('int (void)' and 'const unsigned char')
apply_result_size_size += mode_size[v1]; 
~~~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1504:1: error: use of undeclared identifier 'apply_result_size_size'
apply_result_size_size = 116; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1506:8: error: use of undeclared identifier 'apply_result_size_size'; did you mean 'apply_result_size'?
return apply_result_size_size; 
       ^~~~~~~~~~~~~~~~~~~~~~
       apply_result_size
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/builtins.c:1428:6: note: 'apply_result_size' declared here
int  apply_result_size( ) 
     ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/apply_result_size/src/obj/builtins.o] Error 1
